manifests/webapp-nodejs.k8s.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodejs-webapp
  namespace: demo
  labels:
    app: nodejs-webapp
spec:
  selector:
    matchLabels:
      app: nodejs-webapp
  template:
    metadata:
      labels:
        app: nodejs-webapp
    spec:
      containers:
        - name: web
          image: gcr.io/sap-hybris-sf-playground/cloudnext18/webapp:0dcb1cf8e7a739e7acbe2cb7f529a95d80d878b1
          ports:
            - containerPort: 8080
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=$(CONNECTION_NAME)=tcp:3306",
                    "-credential_file=/secrets/cloudsql/privateKeyData"]
          volumeMounts:
            - name: demo-service-account
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: demo-service-account
          secret:
            secretName: demo-service-account
        - name: cloudsql
          emptyDir:
        volumes:
          - name: demo-service-account
            secret:
              secretName: demo-service-account
          - name: cloudsql
            emptyDir:
