manifests/webapp-nodejs.knative-serving.yaml
# knative deployment for cloudnext18 demo
# contains following objects:
# -> Route object for exposing the app 
# -> Configuration object for creating deployment
# See README.md for more information.

apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: webapp-ui
  namespace: demo
spec:
  traffic:
  - configurationName: webapp-nodejs
    percent: 100
